--- a/map/map.css
+++ b/map/map.css
@@ -10,4 +10,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: teal;
+    background-image: url('../assets/avatar-map.jpg');
+    position: relative;
+}
+
+.main-section {
+    font-size: 40px;
+    background: yellowgreen;
 }
