--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body, html {
-    width: 100%;
+    width: 2000px;
     height: 100%;
     padding: 0;
     margin: 0;
@@ -10,4 +10,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+label {
+    display: block;
 }
