--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body, html {
-    width: 2000px;
+    width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
@@ -10,8 +10,13 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 10px;
 }
 
 label {
     display: block;
+}
+
+img {
+    width: 1000px;
 }
